commit translated contents

--- a/docs/docs-ref-autogen/office/office.setselecteddataoptions.yml
+++ b/docs/docs-ref-autogen/office/office.setselecteddataoptions.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 40c6463fe2dd1600ad7ed8144e66d2b489c901fb
-ms.sourcegitcommit: a36161c2113d94680dc68150d024e68bdf0390fa
+ms.openlocfilehash: 38c442c5f063262e8bba5bd49c3a4a4010310ec5
+ms.sourcegitcommit: a424c9bfe5da422fca04bbfcf70f1c869b210938
 ms.translationtype: MT
 ms.contentlocale: zh-CN
 ms.lasthandoff: 10/10/2018
-ms.locfileid: "25457345"
+ms.locfileid: "25494118"
 items:
 - uid: office.Office.SetSelectedDataOptions
   summary: 提供了有关如何向所选内容插入数据的选项。
@@ -40,7 +40,7 @@ items:
     只有与绑定类型表和的 data 形参传递 TableData 对象时使用。 指定的列、 行或单元格范围和键 / 值对的形式指定要应用于该区域的格式的单元格的对象的数组。
 
 
-    示例：`[{cells: Office.Table.Data, format: {fontColor: "yellow"}}, {cells: {row: 3, column: 4}, format: {borderColor: "white", fontStyle: "bold"}}]`
+    示例：`[\{cells: Office.Table.Data, format: \{fontColor: "yellow"\}\}, \{cells: \{row: 3, column: 4\}, format: \{borderColor: "white", fontStyle: "bold"\}\}]`
   name: cellFormat
   fullName: office.Office.SetSelectedDataOptions.cellFormat
   langs:
