--- a/docs/docs-ref-autogen/excel/excel.chartdatalabels.yml
+++ b/docs/docs-ref-autogen/excel/excel.chartdatalabels.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 31e31ba21ca4d2a5513044258cedd243d12018a5
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 6c8f9ad4146d2081849a8b8a27bcd27bb220d3e0
+ms.sourcegitcommit: a424c9bfe5da422fca04bbfcf70f1c869b210938
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24062791"
+ms.lasthandoff: 10/10/2018
+ms.locfileid: "25494125"
 items:
 - uid: excel.Excel.ChartDataLabels
   summary: >-
@@ -39,7 +39,7 @@ items:
   - excel.Excel.ChartDataLabels.verticalAlignment
 - uid: excel.Excel.ChartDataLabels.autoText
   summary: >-
-    代表是否数据标签自动生成相应基于上下文的文字。
+    表示是否数据标签自动生成合适基于上下文的文字。
 
 
     \[[API 集： ExcelApi 1.8](/javascript/office/requirement-sets/excel-api-requirement-sets)\]
@@ -278,7 +278,7 @@ items:
       description: ''
 - uid: excel.Excel.ChartDataLabels.verticalAlignment
   summary: >-
-    代表图表数据标签的垂直对齐方式。 有关详细信息，请参阅 Excel.ChartTextVerticalAlignment。 仅当 TextOrientation 的数据标签是 90、-90 或 180 时，此属性才有效。
+    代表图表数据标签的垂直对齐方式。 有关详细信息，请参阅 Excel.ChartTextVerticalAlignment。 仅当数据标签的 TextOrientation 为-90、 90 或 180 时，此属性才有效。
 
 
     \[[API 集： ExcelApi 1.8](/javascript/office/requirement-sets/excel-api-requirement-sets)\]
