--- a/docs/docs-ref-autogen/visio/visio.datarefreshcompleteeventargs.yml
+++ b/docs/docs-ref-autogen/visio/visio.datarefreshcompleteeventargs.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5acb541acd4ec3f343380a14ccd16def8f2df338
-ms.sourcegitcommit: a36161c2113d94680dc68150d024e68bdf0390fa
+ms.openlocfilehash: b9ec54561f039dced3e9b227c1f20fbc2a539264
+ms.sourcegitcommit: afc8480f31f0a5753abf9f6a5892daaf70e8f0e7
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 10/10/2018
-ms.locfileid: "25458570"
+ms.lasthandoff: 10/12/2018
+ms.locfileid: "25506562"
 items:
 - uid: visio.Visio.DataRefreshCompleteEventArgs
   summary: >-
@@ -18,7 +18,7 @@ items:
   - typeScript
   type: interface
   package: visio
-  remarks: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nVisio.run(session, function (ctx) {\n    var document1= ctx.document;\n    var page = document1.getActivePage();\n    eventResult1 = document1.onDataRefreshComplete.add(\n        function (args){\n            console.log(\"Data Refresh Result: \"+args.success);\n        });\n\n    return ctx.sync().then(function () {\n       console.log(\"Success\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+  remarks: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nVisio.run(session, function (ctx) {\n    var document1= ctx.document;\n    eventResult1 = document1.onDataRefreshComplete.add(\n        function (args){\n            console.log(\"Data Refresh Result: \"+args.success);\n        });\n\n    return ctx.sync().then(function () {\n       console.log(\"Success\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
   children:
   - visio.Visio.DataRefreshCompleteEventArgs.document
   - visio.Visio.DataRefreshCompleteEventArgs.success
