--- a/docs/docs-ref-autogen/visio/visio.shapemouseentereventargs.yml
+++ b/docs/docs-ref-autogen/visio/visio.shapemouseentereventargs.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5609dbe44cce951cd6d6044a66eafc7c33e07a42
-ms.sourcegitcommit: a36161c2113d94680dc68150d024e68bdf0390fa
+ms.openlocfilehash: f908a1c2184084117cedc51bbedf8cf4224e30df
+ms.sourcegitcommit: afc8480f31f0a5753abf9f6a5892daaf70e8f0e7
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 10/10/2018
-ms.locfileid: "25458801"
+ms.lasthandoff: 10/12/2018
+ms.locfileid: "25506555"
 items:
 - uid: visio.Visio.ShapeMouseEnterEventArgs
   summary: >-
@@ -18,7 +18,7 @@ items:
   - typeScript
   type: interface
   package: visio
-  remarks: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nVisio.run(session, function (ctx) {\n    var document1= ctx.document;\n    var page = document1.getActivePage();\n    eventResult2 = document1.onShapeMouseEnter.add(\n    function (args) {            \n        console.log(Date.now()+\":OnShapeMouseEnter Event\"+JSON.stringify(args));\n    });\n    return ctx.sync().then(function () {\n        console.log(\"Success\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+  remarks: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nVisio.run(session, function (ctx) {\n    var document1= ctx.document;\n    eventResult2 = document1.onShapeMouseEnter.add(\n    function (args) {            \n        console.log(Date.now()+\":OnShapeMouseEnter Event\"+JSON.stringify(args));\n    });\n    return ctx.sync().then(function () {\n        console.log(\"Success\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
   children:
   - visio.Visio.ShapeMouseEnterEventArgs.pageName
   - visio.Visio.ShapeMouseEnterEventArgs.shapeName
