commit bilingual contents

--- a/docs/docs-ref-autogen/visio/visio.pageloadcompleteeventargs.yml
+++ b/docs/docs-ref-autogen/visio/visio.pageloadcompleteeventargs.yml
@@ -1,33 +1,33 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a6a431d2f038e4e1e8cf66afac567d0eaad0155a
-ms.sourcegitcommit: a36161c2113d94680dc68150d024e68bdf0390fa
+ms.openlocfilehash: 92122056411a34d23408d8607cd7f1e1b533fa04
+ms.sourcegitcommit: afc8480f31f0a5753abf9f6a5892daaf70e8f0e7
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 10/10/2018
-ms.locfileid: "25457387"
+ms.lasthandoff: 10/12/2018
+ms.locfileid: "25506576"
 items:
 - uid: visio.Visio.PageLoadCompleteEventArgs
   summary: >-
-    <span data-ttu-id="7f8a2-101">提供有关引发了 PageLoadComplete 事件的页面的信息。</span><span class="sxs-lookup"><span data-stu-id="7f8a2-101">Provides information about the page that raised the PageLoadComplete event.</span></span>
+    <span data-ttu-id="93f0e-101">提供有关引发了 PageLoadComplete 事件的页面的信息。</span><span class="sxs-lookup"><span data-stu-id="93f0e-101">Provides information about the page that raised the PageLoadComplete event.</span></span>
 
 
-    <span data-ttu-id="7f8a2-102">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="7f8a2-102">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
+    <span data-ttu-id="93f0e-102">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="93f0e-102">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
   name: Visio.PageLoadCompleteEventArgs
   fullName: visio.Visio.PageLoadCompleteEventArgs
   langs:
   - typeScript
   type: interface
   package: visio
-  remarks: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"7f8a2-103\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"7f8a2-103\">Examples</span></span>\n\n```javascript\nVisio.run(session, function (ctx) {\n    var document1= ctx.document;\n    var page = document1.getActivePage();\n    eventResult1 = document1.onPageLoadComplete.add(\n        function (args){\n            console.log(\"Page name: \"+args.pageName);\n        });\n\n    return ctx.sync().then(function () {\n        console.log(\"Success\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+  remarks: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"93f0e-103\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"93f0e-103\">Examples</span></span>\n\n```javascript\nVisio.run(session, function (ctx) {\n    var document1= ctx.document;\n    eventResult1 = document1.onPageLoadComplete.add(\n        function (args){\n            console.log(\"Page name: \"+args.pageName);\n        });\n\n    return ctx.sync().then(function () {\n        console.log(\"Success\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
   children:
   - visio.Visio.PageLoadCompleteEventArgs.pageName
   - visio.Visio.PageLoadCompleteEventArgs.success
 - uid: visio.Visio.PageLoadCompleteEventArgs.pageName
   summary: >-
-    <span data-ttu-id="7f8a2-104">获取引发了 PageLoad 事件的页面的名称。</span><span class="sxs-lookup"><span data-stu-id="7f8a2-104">Gets the name of the page that raised the PageLoad event.</span></span>
+    <span data-ttu-id="93f0e-104">获取引发了 PageLoad 事件的页面的名称。</span><span class="sxs-lookup"><span data-stu-id="93f0e-104">Gets the name of the page that raised the PageLoad event.</span></span>
 
 
-    <span data-ttu-id="7f8a2-105">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="7f8a2-105">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
+    <span data-ttu-id="93f0e-105">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="93f0e-105">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
   name: pageName
   fullName: visio.Visio.PageLoadCompleteEventArgs.pageName
   langs:
@@ -40,10 +40,10 @@ items:
       - string
 - uid: visio.Visio.PageLoadCompleteEventArgs.success
   summary: >-
-    <span data-ttu-id="7f8a2-106">获取 PageLoadComplete 事件的成功或失败结果。</span><span class="sxs-lookup"><span data-stu-id="7f8a2-106">Gets the success or failure of the PageLoadComplete event.</span></span>
+    <span data-ttu-id="93f0e-106">获取 PageLoadComplete 事件的成功或失败结果。</span><span class="sxs-lookup"><span data-stu-id="93f0e-106">Gets the success or failure of the PageLoadComplete event.</span></span>
 
 
-    <span data-ttu-id="7f8a2-107">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="7f8a2-107">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
+    <span data-ttu-id="93f0e-107">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="93f0e-107">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
   name: success
   fullName: visio.Visio.PageLoadCompleteEventArgs.success
   langs:
