--- a/docs/docs-ref-autogen/visio/visio.shapemouseleaveeventargs.yml
+++ b/docs/docs-ref-autogen/visio/visio.shapemouseleaveeventargs.yml
@@ -1,33 +1,33 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: bd96a73e4f835eb3538fce70d7dea1c2cdf41ca9
-ms.sourcegitcommit: a36161c2113d94680dc68150d024e68bdf0390fa
+ms.openlocfilehash: 2183c924de70584f0d489320f3edd77a9c90b913
+ms.sourcegitcommit: afc8480f31f0a5753abf9f6a5892daaf70e8f0e7
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 10/10/2018
-ms.locfileid: "25458815"
+ms.lasthandoff: 10/12/2018
+ms.locfileid: "25506583"
 items:
 - uid: visio.Visio.ShapeMouseLeaveEventArgs
   summary: >-
-    <span data-ttu-id="7201a-101">提供有关引发了 ShapeMouseLeave 事件的形状的信息。</span><span class="sxs-lookup"><span data-stu-id="7201a-101">Provides information about the shape that raised the ShapeMouseLeave event.</span></span>
+    <span data-ttu-id="6a57f-101">提供有关引发了 ShapeMouseLeave 事件的形状的信息。</span><span class="sxs-lookup"><span data-stu-id="6a57f-101">Provides information about the shape that raised the ShapeMouseLeave event.</span></span>
 
 
-    <span data-ttu-id="7201a-102">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="7201a-102">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
+    <span data-ttu-id="6a57f-102">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="6a57f-102">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
   name: Visio.ShapeMouseLeaveEventArgs
   fullName: visio.Visio.ShapeMouseLeaveEventArgs
   langs:
   - typeScript
   type: interface
   package: visio
-  remarks: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"7201a-103\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"7201a-103\">Examples</span></span>\n\n```javascript\nVisio.run(session, function (ctx) {\n    var document1= ctx.document;\n    var page = document1.getActivePage();\n    eventResult2 = document1.onShapeMouseLeave.add(\n        function (args){            \n            console.log(Date.now()+\":OnShapeMouseLeave Event\"+JSON.stringify(args));\n        });\n    return ctx.sync().then(function () {\n        console.log(\"Success\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+  remarks: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"6a57f-103\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"6a57f-103\">Examples</span></span>\n\n```javascript\nVisio.run(session, function (ctx) {\n    var document1= ctx.document;\n    eventResult2 = document1.onShapeMouseLeave.add(\n        function (args){            \n            console.log(Date.now()+\":OnShapeMouseLeave Event\"+JSON.stringify(args));\n        });\n    return ctx.sync().then(function () {\n        console.log(\"Success\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
   children:
   - visio.Visio.ShapeMouseLeaveEventArgs.pageName
   - visio.Visio.ShapeMouseLeaveEventArgs.shapeName
 - uid: visio.Visio.ShapeMouseLeaveEventArgs.pageName
   summary: >-
-    <span data-ttu-id="7201a-104">获取页面名称，其中包含引发了 ShapeMouseLeave 事件的 Shape 对象。</span><span class="sxs-lookup"><span data-stu-id="7201a-104">Gets the name of the page which has the shape object that raised the ShapeMouseLeave event.</span></span>
+    <span data-ttu-id="6a57f-104">获取页面名称，其中包含引发了 ShapeMouseLeave 事件的 Shape 对象。</span><span class="sxs-lookup"><span data-stu-id="6a57f-104">Gets the name of the page which has the shape object that raised the ShapeMouseLeave event.</span></span>
 
 
-    <span data-ttu-id="7201a-105">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="7201a-105">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
+    <span data-ttu-id="6a57f-105">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="6a57f-105">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
   name: pageName
   fullName: visio.Visio.ShapeMouseLeaveEventArgs.pageName
   langs:
@@ -40,10 +40,10 @@ items:
       - string
 - uid: visio.Visio.ShapeMouseLeaveEventArgs.shapeName
   summary: >-
-    <span data-ttu-id="7201a-106">获取引发了 ShapeMouseLeave 事件的 Shape 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="7201a-106">Gets the name of the shape object that raised the ShapeMouseLeave event.</span></span>
+    <span data-ttu-id="6a57f-106">获取引发了 ShapeMouseLeave 事件的 Shape 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="6a57f-106">Gets the name of the shape object that raised the ShapeMouseLeave event.</span></span>
 
 
-    <span data-ttu-id="7201a-107">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="7201a-107">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
+    <span data-ttu-id="6a57f-107">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="6a57f-107">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
   name: shapeName
   fullName: visio.Visio.ShapeMouseLeaveEventArgs.shapeName
   langs:
