--- a/docs/docs-ref-autogen/visio/visio.datarefreshcompleteeventargs.yml
+++ b/docs/docs-ref-autogen/visio/visio.datarefreshcompleteeventargs.yml
@@ -1,33 +1,33 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5acb541acd4ec3f343380a14ccd16def8f2df338
-ms.sourcegitcommit: a36161c2113d94680dc68150d024e68bdf0390fa
+ms.openlocfilehash: b9ec54561f039dced3e9b227c1f20fbc2a539264
+ms.sourcegitcommit: afc8480f31f0a5753abf9f6a5892daaf70e8f0e7
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 10/10/2018
-ms.locfileid: "25458570"
+ms.lasthandoff: 10/12/2018
+ms.locfileid: "25506562"
 items:
 - uid: visio.Visio.DataRefreshCompleteEventArgs
   summary: >-
-    <span data-ttu-id="22d42-101">提供有关引发了 DataRefreshComplete 事件的文档的信息。</span><span class="sxs-lookup"><span data-stu-id="22d42-101">Provides information about the document that raised the DataRefreshComplete event.</span></span>
+    <span data-ttu-id="9a0a5-101">提供有关引发了 DataRefreshComplete 事件的文档的信息。</span><span class="sxs-lookup"><span data-stu-id="9a0a5-101">Provides information about the document that raised the DataRefreshComplete event.</span></span>
 
 
-    <span data-ttu-id="22d42-102">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="22d42-102">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
+    <span data-ttu-id="9a0a5-102">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="9a0a5-102">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
   name: Visio.DataRefreshCompleteEventArgs
   fullName: visio.Visio.DataRefreshCompleteEventArgs
   langs:
   - typeScript
   type: interface
   package: visio
-  remarks: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"22d42-103\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"22d42-103\">Examples</span></span>\n\n```javascript\nVisio.run(session, function (ctx) {\n    var document1= ctx.document;\n    var page = document1.getActivePage();\n    eventResult1 = document1.onDataRefreshComplete.add(\n        function (args){\n            console.log(\"Data Refresh Result: \"+args.success);\n        });\n\n    return ctx.sync().then(function () {\n       console.log(\"Success\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+  remarks: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"9a0a5-103\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"9a0a5-103\">Examples</span></span>\n\n```javascript\nVisio.run(session, function (ctx) {\n    var document1= ctx.document;\n    eventResult1 = document1.onDataRefreshComplete.add(\n        function (args){\n            console.log(\"Data Refresh Result: \"+args.success);\n        });\n\n    return ctx.sync().then(function () {\n       console.log(\"Success\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
   children:
   - visio.Visio.DataRefreshCompleteEventArgs.document
   - visio.Visio.DataRefreshCompleteEventArgs.success
 - uid: visio.Visio.DataRefreshCompleteEventArgs.document
   summary: >-
-    <span data-ttu-id="22d42-104">获取有关引发了 DataRefreshComplete 事件的 Document 对象。</span><span class="sxs-lookup"><span data-stu-id="22d42-104">Gets the document object that raised the DataRefreshComplete event.</span></span>
+    <span data-ttu-id="9a0a5-104">获取有关引发了 DataRefreshComplete 事件的 Document 对象。</span><span class="sxs-lookup"><span data-stu-id="9a0a5-104">Gets the document object that raised the DataRefreshComplete event.</span></span>
 
 
-    <span data-ttu-id="22d42-105">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="22d42-105">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
+    <span data-ttu-id="9a0a5-105">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="9a0a5-105">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
   name: document
   fullName: visio.Visio.DataRefreshCompleteEventArgs.document
   langs:
@@ -40,10 +40,10 @@ items:
       - Visio.Document
 - uid: visio.Visio.DataRefreshCompleteEventArgs.success
   summary: >-
-    <span data-ttu-id="22d42-106">获取的成功或失败 DataRefreshComplete 事件。</span><span class="sxs-lookup"><span data-stu-id="22d42-106">Gets the success or failure of the DataRefreshComplete event.</span></span>
+    <span data-ttu-id="9a0a5-106">获取的成功或失败 DataRefreshComplete 事件。</span><span class="sxs-lookup"><span data-stu-id="9a0a5-106">Gets the success or failure of the DataRefreshComplete event.</span></span>
 
 
-    <span data-ttu-id="22d42-107">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="22d42-107">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
+    <span data-ttu-id="9a0a5-107">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="9a0a5-107">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
   name: success
   fullName: visio.Visio.DataRefreshCompleteEventArgs.success
   langs:
