--- a/docs/docs-ref-autogen/visio/visio.shapemouseentereventargs.yml
+++ b/docs/docs-ref-autogen/visio/visio.shapemouseentereventargs.yml
@@ -1,33 +1,33 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5609dbe44cce951cd6d6044a66eafc7c33e07a42
-ms.sourcegitcommit: a36161c2113d94680dc68150d024e68bdf0390fa
+ms.openlocfilehash: f908a1c2184084117cedc51bbedf8cf4224e30df
+ms.sourcegitcommit: afc8480f31f0a5753abf9f6a5892daaf70e8f0e7
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 10/10/2018
-ms.locfileid: "25458801"
+ms.lasthandoff: 10/12/2018
+ms.locfileid: "25506555"
 items:
 - uid: visio.Visio.ShapeMouseEnterEventArgs
   summary: >-
-    <span data-ttu-id="081cb-101">提供有关引发了 ShapeMouseEnter 事件的形状的信息。</span><span class="sxs-lookup"><span data-stu-id="081cb-101">Provides information about the shape that raised the ShapeMouseEnter event.</span></span>
+    <span data-ttu-id="cbe0d-101">提供有关引发了 ShapeMouseEnter 事件的形状的信息。</span><span class="sxs-lookup"><span data-stu-id="cbe0d-101">Provides information about the shape that raised the ShapeMouseEnter event.</span></span>
 
 
-    <span data-ttu-id="081cb-102">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="081cb-102">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
+    <span data-ttu-id="cbe0d-102">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="cbe0d-102">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
   name: Visio.ShapeMouseEnterEventArgs
   fullName: visio.Visio.ShapeMouseEnterEventArgs
   langs:
   - typeScript
   type: interface
   package: visio
-  remarks: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"081cb-103\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"081cb-103\">Examples</span></span>\n\n```javascript\nVisio.run(session, function (ctx) {\n    var document1= ctx.document;\n    var page = document1.getActivePage();\n    eventResult2 = document1.onShapeMouseEnter.add(\n    function (args) {            \n        console.log(Date.now()+\":OnShapeMouseEnter Event\"+JSON.stringify(args));\n    });\n    return ctx.sync().then(function () {\n        console.log(\"Success\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+  remarks: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"cbe0d-103\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"cbe0d-103\">Examples</span></span>\n\n```javascript\nVisio.run(session, function (ctx) {\n    var document1= ctx.document;\n    eventResult2 = document1.onShapeMouseEnter.add(\n    function (args) {            \n        console.log(Date.now()+\":OnShapeMouseEnter Event\"+JSON.stringify(args));\n    });\n    return ctx.sync().then(function () {\n        console.log(\"Success\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
   children:
   - visio.Visio.ShapeMouseEnterEventArgs.pageName
   - visio.Visio.ShapeMouseEnterEventArgs.shapeName
 - uid: visio.Visio.ShapeMouseEnterEventArgs.pageName
   summary: >-
-    <span data-ttu-id="081cb-104">获取页面名称，其中包含引发了 ShapeMouseEnter 事件的 Shape 对象。</span><span class="sxs-lookup"><span data-stu-id="081cb-104">Gets the name of the page which has the shape object that raised the ShapeMouseEnter event.</span></span>
+    <span data-ttu-id="cbe0d-104">获取页面名称，其中包含引发了 ShapeMouseEnter 事件的 Shape 对象。</span><span class="sxs-lookup"><span data-stu-id="cbe0d-104">Gets the name of the page which has the shape object that raised the ShapeMouseEnter event.</span></span>
 
 
-    <span data-ttu-id="081cb-105">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="081cb-105">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
+    <span data-ttu-id="cbe0d-105">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="cbe0d-105">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
   name: pageName
   fullName: visio.Visio.ShapeMouseEnterEventArgs.pageName
   langs:
@@ -40,10 +40,10 @@ items:
       - string
 - uid: visio.Visio.ShapeMouseEnterEventArgs.shapeName
   summary: >-
-    <span data-ttu-id="081cb-106">获取引发了 ShapeMouseEnter 事件的 Shape 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="081cb-106">Gets the name of the shape object that raised the ShapeMouseEnter event.</span></span>
+    <span data-ttu-id="cbe0d-106">获取引发了 ShapeMouseEnter 事件的 Shape 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="cbe0d-106">Gets the name of the shape object that raised the ShapeMouseEnter event.</span></span>
 
 
-    <span data-ttu-id="081cb-107">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="081cb-107">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
+    <span data-ttu-id="cbe0d-107">\[[API 集： 1.1](/javascript/office/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="cbe0d-107">\[ [API set: 1.1](/javascript/office/overview/visio-javascript-reference-overview) \]</span></span>
   name: shapeName
   fullName: visio.Visio.ShapeMouseEnterEventArgs.shapeName
   langs:
